# scrapping-database-whatsApp-groupe

./: .env.example  .gitignore  AGENT_AI.md  AGENT_ARCHITECT.md  AGENT_BACKEND.md  AGENT_DEVOPS.md  AGENT_FRONTEND.md  SCENARIOS_DE_TEST.md  docker-compose.yml  openapi.yaml  tests-radar.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_slack.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/models/: contact.rs  group.rs  message.rs  mod.rs  opportunity.rs  profile.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  groups.rs  health.rs  mod.rs  opportunities.rs  profile.rs  scan.rs  slack.rs  webhook.rs  whatsapp.rs
backend/src/services/: alerting.rs  evolution.rs  gemini.rs  hub_spoke.rs  matching.rs  mod.rs  slack.rs
backend/src/ws/: manager.rs
deploy/: coolify-setup.sh
docs/: HUB_SPOKE_INTEGRATION.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
mcp-server/: index.js  package.json
mock-evolution/: index.js  package-lock.json  package.json
stitch/: project_info.json
stitch/param_tres_personnels_radar/: code.html
stitch/radar_dashboard_version_corrig_e_clair/: code.html
stitch/radar_onboarding_light_mode_step_1/: code.html
stitch/radar_opportunit_s_tableau/: code.html
stitch/radar_param_tres_admin/: code.html
stitch/radar_scan_historique/: code.html
tests/: api-tests.js  package-lock.json  package.json  playwright.config.js  run.sh
tests/visual/: admin.spec.js  auth.spec.js  helpers.js  (+5 more)
(+16 files in other folders)
